# openfold

./: .gitignore  Dockerfile  MANIFESTO.md  MMseqs_optimization.md  Makefile  ODINFOLD_IDENTITY.md  PRODUCTION_BENCHMARK_GUIDE.md  RUNPOD_SETUP_GUIDE.md  azure_ml_benchmark.py  benchmark_casp14_foldforever_vs_baselines.py  benchmark_client.py  benchmark_config.json  benchmark_fixed.py  comprehensive_1000_protein_benchmark.py  death_to_openfold.md  deploy.sh  deploy_benchmark_azure.sh  deploy_benchmark_server.py  deploy_no_pty.sh  deploy_production_benchmark.sh  deploy_runpod_server.sh  docker-compose.yml  environment.yml  execute_production_benchmark.sh  final_benchmark.md  final_dev_tasks.md  jupyter_setup.py  kernels_template.md  more_tasks.md  more_tasks_again.md  multimer_etc_tasks.md  openfoldplus_tasks.md  production_benchmark_instructions.md  production_benchmark_server.py  production_benchmark_setup.py  real_casp_benchmark.py  real_openfold_benchmark.py  request_a100_quota.sh  requirements.txt  runpod_deploy.sh  (+33 more)
.github/workflows/: azure-gpu-deploy.yml  gpu-benchmark.yml
azure_ready_results/: benchmark_report.csv  benchmark_report.md
cpp_engine/: CMakeLists.txt  README.md  build.sh
cpp_engine/include/: attention.h  fold_engine.h  ligand_encoder.h  mutation_predictor.h  structure_module.h  utils.h
cpp_engine/src/: attention.cpp  cli.cpp  fold_engine.cpp  ligand_encoder.cpp  main.cpp  mutation_predictor.cpp  structure_module.cpp  utils.cpp
demo_dataset/fasta/: H1025.fasta  T1024.fasta  T1026.fasta  T1027.fasta
docs/: ARCHITECTURE.md  BRAND_GUIDE.md  CI_CD_SETUP.md  VISUAL_ASSETS.md
k8s/: benchmark-deployment.yaml  odinfold-deployment.yaml
odinfold/api/: __init__.py  server.py
openfold/cuda_kernels/: setup.py  triangle_kernels.cu
openfold/cuda_kernels/include/: triangle_attention.h  triangle_multiply.h
openfold/cuda_kernels/src/: cuda_extension.cpp  pybind_interface.cpp  triangle_attention.cu  triangle_multiply.cu
openfold/data/: data_pipeline.py
openfold/utils/: gpu_memory_optimization.py  md_refinement.py
openfoldpp/: README.md  README2.md  requirements.txt
openfoldpp/docs/: OPENFOLD_PLUS_PLUS_PROGRESS_SUMMARY.md  OpenFold++.md  advanced_analysis.json  demo_analysis.json  openfold_config.json  openfoldplus_tasks.md  real_casp14_analysis.json  real_openfold_analysis.json
openfoldpp/reports/casp/: casp_benchmark_report.md  casp_benchmark_results.json  casp_results.csv
openfoldpp/reports/confidence/: confidence_report.md  confidence_results.json
openfoldpp/reports/distillation/: distillation_completion_report.md  executive_summary.md  final_metrics.json
openfoldpp/reports/esm_3b/: esm_3b_benchmark_report.md  esm_3b_benchmark_results.json
openfoldpp/reports/hard_target/: hard_target_report.md  hard_target_results.json
openfoldpp/reports/phase_d/: quick_benchmark_report.md  quick_benchmark_results.json
openfoldpp/reports/production/: production_benchmark_report.md  production_benchmark_results.json
openfoldpp/reports/relaxation/: relaxation_report.md  relaxation_results.json
openfoldpp/reports/sparse_attention/: sparse_attention_report.md  sparse_attention_results.json
openfoldpp/results/analysis/benchmark_results/: benchmark_report_20250801_174452.txt  benchmark_results_20250801_174452.json
openfoldpp/results/analysis/casp14_results/: casp14_analysis.json  casp14_results.csv
openfoldpp/results/analysis/casp15_results/: casp15_analysis.json  casp15_results.csv
openfoldpp/results/benchmarks/: advanced_results.csv  comprehensive_comparison.csv  demo_results.csv  enhanced_real_openfold_results.csv  final_comprehensive_comparison.csv  final_enhanced_results.csv  fixed_structural_metrics.csv  full_infrastructure_results.csv  quick_metrics_results.csv  quick_realistic_results.csv  real_casp14_results.csv  real_openfold_results.csv  trained_openfold_results.csv  ultimate_comprehensive_results.csv  working_openfold_results.csv
openfoldpp/results/benchmarks/phase_b/: quick_benchmark_report.md  quick_benchmark_results.json
openfoldpp/test_reports/: ci_report.md  ci_results.json
real_fasta_input/: H1101.fasta  T1024.fasta  T1030.fasta  T1031.fasta  T1032.fasta
reports/local_validation/: local_validation_report.md  local_validation_results.json
results/: benchmark_report.csv  benchmark_report.md
results_full/: benchmark_report.csv  benchmark_report.md
runpod/: README.md  RUNPOD_INSTRUCTIONS.md  comprehensive_runpod_results.json  create_new_runpod.md  quick_runpod_setup.sh  runpod_execute.sh  runpod_requirements.txt  runpod_startup.sh  setup_runpod_benchmark.sh
scripts/azure/: setup_a100_cluster.sh  setup_odinfold_cluster.sh
scripts/docker/: build.sh
scripts/evaluation/: gpu_ci_benchmark.py
tasks/: README.md  V2_ARCHITECTURE.md  V2_README.md  V2_tasks.md  before_multimer_tasks.md  tasks_first.md
test_casp_data/fasta/: T1024.fasta
wasm_build/: CMakeLists.txt  README.md  build.sh
wasm_build/src/: odinfold_wasm.cpp
wasm_build/web/: demo.js  index.html  odinfold-wasm.js  odinfold.js  style.css
